# journal-starter

./: .dockerignore  .env-sample  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  start.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/actions/01-lint/: action.yml
.github/actions/02-test/: action.yml
.github/actions/03-build/: action.yml
.github/actions/04-push-docker/: action.yml
.github/actions/05-push-ecr/: action.yml
.github/workflows/: ci.yml  deploy-ecs.yml  fastapi_workflow.yml
api/: .dockerignore  Dockerfile  config.py  main.py  requirements.txt
api/models/: entry.py
api/routers/: journal_router.py
api/services/: llm_service.py
db/: database_setup.sql
docker-compose/: docker-compose.devcontainer.yml  docker-compose.local.yml
terraform/phase6/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/phase6/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/phase6/modules/vpc/: main.tf  outputs.tf  variables.tf
tests/: test_entries.py
