[project]
name = "journal-api"
version = "0.1.0"
description = "Journal API"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "pydantic>=2",
    "pydantic-settings",
    "openai",
    "boto3"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pyright",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "N", "B", "C4", "DTZ",
    "SIM", "RET", "PT", "S", "T20", "ASYNC", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",    
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"scripts/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"
include = ["api", "scripts", "tests"]
venvPath = "."
venv = ".venv"

[tool.setuptools.packages.find]
include = ["api*"]